Fix alignment issue

--- a/assets/components/pages/blog-single/blog-single.scss
+++ b/assets/components/pages/blog-single/blog-single.scss
@@ -66,7 +66,7 @@ article.blog-post {
     }
     
     .nav-prev {
-      margin: 0;
+      margin: 0 0 0 auto;
       text-align: right;
     }
     
